bizinikiwi/pezframe/support/test/tests/pezpallet_ui/call_multiple_call_index.stderr
error: Invalid pezpallet::call, too many call_index attributes given
  --> tests/pezpallet_ui/call_multiple_call_index.rs:34:7
   |
34 |         pub fn foo(origin: OriginFor<T>) -> DispatchResultWithPostInfo {}
   |             ^^
